src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__jsonb__cast_jsonb_to_string.snap
---
source: src/expr/src/scalar/func/impls/jsonb.rs
expression: "#[sqlfunc(\n    sqlname = \"jsonb_to_text\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastStringToJsonb)\n)]\npub fn cast_jsonb_to_string<'a>(a: JsonbRef<'a>) -> String {\n    let mut buf = String::new();\n    strconv::format_jsonb(&mut buf, a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastJsonbToString;
impl crate::func::EagerUnaryFunc for CastJsonbToString {
    type Input<'a> = JsonbRef<'a>;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_jsonb_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToJsonb)
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastJsonbToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("jsonb_to_text")
    }
}
pub fn cast_jsonb_to_string<'a>(a: JsonbRef<'a>) -> String {
    let mut buf = String::new();
    strconv::format_jsonb(&mut buf, a);
    buf
}
